# ha-signal-conditioner

./: .devcontainer.json  .gitignore  CONTRIBUTING.md  CREDITS.md  README.md  conftest.py  hacs.json  info.md  precommit  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: check.yml  hacs.yml
config/: configuration.yaml
custom_components/: __init__.py
custom_components/normify/: __init__.py  calibration.py  config.py  config_flow.py  const.py  diagnostics.py  manifest.json  pipeline.py  sensor.py  strings.json
custom_components/normify/translations/: en.json
scripts/: develop  lint  setup  validate_hacs.py
tests/components/normify/: __init__.py  conftest.py  test_calibration.py  test_config_flow.py  test_diagnostics.py  test_init.py  test_pipeline.py  test_sensor.py
