[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"

[tool.coverage.run]
branch = true
source = ["custom_components/normify"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "RUF", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true
exclude = ["tests/"]
